added support for DBX files larger than 2GB
- updated autoconf
- updated copyright years
- replaced long with int where 32 bit values are used
- use unsigned long long for file size
- use stat to get file size instead of ftell
- remove use of win32 api for file size
- compile with -D_FILE_OFFSET_BITS=64 for 64bit file size support
- compilation flags: -Wall -Werror
- fixed file position validity check in dbxread.c

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
+AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -Wall -Werror
 bin_PROGRAMS = undbx
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c
 noinst_HEADERS =  dbxsys.h dbxread.h
