--- a/Makefile.in
+++ b/Makefile.in
@@ -175,8 +175,10 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
+top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -Wall -Werror
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c
 noinst_HEADERS = dbxsys.h dbxread.h
 dist_noinst_SCRIPTS = dist-win32.sh
