added undbx-launcher.vbs to source archive

--- a/Makefile.in
+++ b/Makefile.in
@@ -181,7 +181,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -Wall -Werror
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c
 noinst_HEADERS = dbxsys.h dbxread.h
-dist_noinst_SCRIPTS = dist-win32.sh
+dist_noinst_SCRIPTS = dist-win32.sh undbx-launcher.vbs
 bin_SCRIPTS = undbx-launcher.vbs
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
