--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@ AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -Wall -Werror
 bin_PROGRAMS = undbx
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c
 noinst_HEADERS =  dbxsys.h dbxread.h
-dist_noinst_SCRIPTS = dist-win32.sh
+dist_noinst_SCRIPTS = dist-win32.sh undbx-launcher.vbs
 bin_SCRIPTS = undbx-launcher.vbs
