--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -Wall -Werror
+AM_CFLAGS = -Wall -Werror
 bin_PROGRAMS = undbx
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c
 noinst_HEADERS =  dbxsys.h dbxread.h
