--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@ AM_CFLAGS = -Wall -Werror
 bin_PROGRAMS = undbx
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c emlread.c
 noinst_HEADERS =  dbxsys.h dbxread.h
-dist_noinst_SCRIPTS = dist-win32.sh undbx-launcher.vbs
-bin_SCRIPTS = undbx-launcher.vbs
+dist_noinst_SCRIPTS = dist-win32.sh undbx.hta
+bin_SCRIPTS = undbx.hta
