--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 AM_CFLAGS = -Wall -Werror
 bin_PROGRAMS = undbx
 undbx_SOURCES = undbx.c dbxsys.c dbxread.c emlread.c
-noinst_HEADERS =  dbxsys.h dbxread.h
+noinst_HEADERS =  dbxsys.h dbxread.h emlread.h
 dist_noinst_SCRIPTS = dist-win32.sh undbx.hta
 bin_SCRIPTS = undbx.hta
+dist_noinst_DATA = README.rst
