--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,7 @@ AC_PROG_MAKE_SET
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h string.h unistd.h utime.h])
+AC_CHECK_HEADERS([stdlib.h string.h unistd.h utime.h getopt.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
